--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <ul>
-        <li><a href="/timer">Timer</a></li>
-        <li><a href="/accordeon">Accordeon</a></li>
+        <li><a href="timer/">Timer</a></li>
+        <li><a href="accordeon/">Accordeon</a></li>
     </ul>
 </body>
 </html>
